feat: add header, ui components

--- a/app/globals.css
+++ b/app/globals.css
@@ -114,7 +114,14 @@
 
 @layer base {
   * {
+    margin: 0;
+    padding: 0;
     @apply border-border outline-ring/50;
+  }
+  *::before,
+  *::after {
+    margin: 0;
+    padding: 0;
   }
   body {
     @apply bg-background text-foreground;
